# lakehouse-engine

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/gab/notebooks/: gab.py  gab_dim_calendar.py  gab_job_manager.py  query_builder_helper.py
assets/gab/utils/: databricks_job_utils.py  query_builder_utils.py
cicd/: .bumpversion.cfg  Dockerfile  Jenkinsfile  Jenkinsfile_deploy  bandit.yaml  extra_os_requirements.txt  flake8.conf  meta.yaml  mypy.ini  requirements.txt  requirements_azure.txt  requirements_cicd.txt  requirements_dq.txt  requirements_os.txt  requirements_sftp.txt  requirements_sharepoint.txt
cicd/code_doc/: content.css  custom_example_macros.py  examples.json  gen_ref_nav.py  index.html.jinja2  mkdocs.yml  mkdocs_macros.py  module.html.jinja2  render_doc.py  render_docs.py
docs/: contributing.md  index.md  release-notes.md  terms-and-conditions.md
docs_src/quickstart/: example.py
lakehouse_engine/: __init__.py  engine.py
lakehouse_engine/algorithms/: __init__.py  algorithm.py  data_loader.py  dq_validator.py  exceptions.py  gab.py  reconciliator.py  sensor.py
lakehouse_engine/algorithms/sensors/: __init__.py  heartbeat.py  sensor.py
lakehouse_engine/configs/: __init__.py  engine.yaml
lakehouse_engine/core/: __init__.py  dbfs_file_manager.py  definitions.py  exec_env.py  executable.py  file_manager.py  gab_manager.py  gab_sql_generator.py  s3_file_manager.py  sensor_manager.py  table_manager.py
lakehouse_engine/dq_processors/: __init__.py  assistant.py  dq_factory.py  exceptions.py  validator.py
lakehouse_engine/dq_processors/custom_expectations/: __init__.py  expect_column_pair_a_to_be_not_equal_to_b.py  expect_column_pair_a_to_be_smaller_or_equal_than_b.py  expect_column_pair_date_a_to_be_greater_than_or_equal_to_date_b.py  expect_column_values_to_be_date_not_older_than.py  expect_column_values_to_not_be_null_or_empty_string.py  expect_multicolumn_column_a_must_equal_b_or_c.py  expect_queried_column_agg_value_to_be.py
lakehouse_engine/io/: __init__.py  exceptions.py  reader.py  reader_factory.py  writer.py  writer_factory.py
lakehouse_engine/io/readers/: __init__.py  dataframe_reader.py  file_reader.py  jdbc_reader.py  kafka_reader.py  query_reader.py  sap_b4_reader.py  sap_bw_reader.py  sftp_reader.py  sharepoint_reader.py  table_reader.py
lakehouse_engine/io/writers/: __init__.py  console_writer.py  dataframe_writer.py  delta_merge_writer.py  file_writer.py  jdbc_writer.py  kafka_writer.py  rest_api_writer.py  sharepoint_writer.py  table_writer.py
lakehouse_engine/terminators/: __init__.py  cdf_processor.py  dataset_optimizer.py  notifier.py  notifier_factory.py  sensor_terminator.py  spark_terminator.py  terminator_factory.py
lakehouse_engine/terminators/notifiers/: __init__.py  email_notifier.py  exceptions.py  notification_templates.py
lakehouse_engine/transformers/: __init__.py  aggregators.py  column_creators.py  column_reshapers.py  condensers.py  custom_transformers.py  data_maskers.py  date_transformers.py  exceptions.py  filters.py  joiners.py  null_handlers.py  optimizers.py  regex_transformers.py  repartitioners.py  transformer_factory.py  unions.py  watermarker.py
lakehouse_engine/utils/: __init__.py  acon_utils.py  databricks_utils.py  dq_utils.py  engine_usage_stats.py  expectations_utils.py  file_utils.py  gab_utils.py  logging_handler.py  rest_api.py  schema_utils.py  sharepoint_utils.py  spark_utils.py  sql_parser_utils.py
lakehouse_engine/utils/configs/: __init__.py  config_utils.py
lakehouse_engine/utils/extraction/: __init__.py  jdbc_extraction_utils.py  sap_b4_extraction_utils.py  sap_bw_extraction_utils.py  sftp_extraction_utils.py
lakehouse_engine/utils/storage/: __init__.py  dbfs_storage.py  file_storage.py  (+3 more)
lakehouse_engine_usage/: __init__.py  lakehouse_engine_usage.md
lakehouse_engine_usage/data_loader/: __init__.py  data_loader.md
lakehouse_engine_usage/data_quality/: __init__.py  data_quality.md
lakehouse_engine_usage/gab/: __init__.py  gab.md
lakehouse_engine_usage/managerhelper/: managerhelper.md  operations-script.js  operations-styles-mkdocs.css  styles-mkdocs.css
lakehouse_engine_usage/reconciliator/: __init__.py  reconciliator.md
lakehouse_engine_usage/sensor/: __init__.py  sensor.md
lakehouse_engine_usage/sensors/: __init__.py  sensors.md
samples/: cricket_dq_tutorial.py  tpch_load_and_analysis_tutorial.py
samples/table_tennis_medallion_architecture_tutorial/: table_tennis_bronze.py  table_tennis_gold.py  table_tennis_matches.sql  table_tennis_player_season_stats.sql  table_tennis_silver.py
scripts/: README.md  docs  install  lint  style  test  test-security
tests/: conftest.py
tests/configs/: __init__.py  engine.yaml
tests/feature/: __init__.py  test_append_load.py  test_data_quality.py  test_dq_validator.py  test_engine_usage_stats.py  test_extract_from_sap_b4.py  test_extract_from_sap_bw.py  test_file_manager.py  test_file_manager_dbfs.py  test_file_manager_s3.py  test_full_load.py  test_gab.py  test_heartbeat.py  test_jdbc_reader.py  test_materialize_cdf.py  test_notification.py  test_reconciliation.py  test_schema_evolution.py  test_sensors.py  test_sftp_reader.py  test_sharepoint_reader.py  test_sharepoint_writer.py  test_table_manager.py  test_writers.py
tests/unit/: test_acon_validation.py  test_custom_configs.py  test_databricks_utils.py  test_failure_notification_creation.py  test_heartbeat_acon_creation.py  test_heartbeat_anchor_job.py  test_log_filter_sensitive_data.py  test_notification_creation.py  test_notification_factory.py  test_prisma_dq_rule_id.py  test_prisma_function_definition.py  test_rest_api_functions.py  test_sensor.py  test_sensor_manager.py  test_sharepoint_csv_reader.py  test_spark_session.py  test_version.py
tests/utils/: __init__.py  dataframe_helpers.py  dq_rules_table_utils.py  exec_env_helpers.py  local_storage.py  mocks.py  smtp_server.py
(+744 files in other folders)
